# English-bot

./: .env.example  .gitignore  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  alembic.ini  main.py  pyproject.toml  requirements.txt  setup_db.py
alembic/: env.py
alembic/versions/: 5f5fb82d0d66_initial_migration.py
src/: __init__.py  bot.py  callback_data.py  config.py  constants.py  database.py  excel_handler.py  handlers.py  keyboards.py  leitner.py  logger.py  models.py  scheduler.py
src/constants/: __init__.py  buttons.py  callbacks.py  messages.py  states.py
src/conversations/: __init__.py  add_words_conversation.py  edit_word_conversation.py  settings_conversation.py  start_conversation.py
src/handlers/: __init__.py  base.py  learning.py  progress.py  settings.py  start.py  words.py
src/services/: __init__.py  learning_service.py  progress_service.py  user_service.py  word_service.py
